[gd_scene load_steps=5 format=2]

[ext_resource path="res://Effects/question/question.tscn" type="PackedScene" id=1]
[ext_resource path="res://Components/brain/brain.gd" type="Script" id=2]
[ext_resource path="res://Effects/exclaimation/exclaimation.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 1.0

[node name="brain" type="Node2D"]
script = ExtResource( 2 )
TOLERANCE = 2
THINK_TIME = 0.1
SIGHT_RANGE = 135.0
MAX_TARGETS = 5
EXCLAIMATION = ExtResource( 3 )
QUESTION = ExtResource( 1 )

[node name="think_timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="sight" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="sight"]
shape = SubResource( 1 )

[connection signal="tree_entered" from="." to="." method="_on_brain_tree_entered"]
[connection signal="timeout" from="think_timer" to="." method="_on_think_timer_timeout"]
[connection signal="body_entered" from="sight" to="." method="_on_sight_body_entered"]
[connection signal="body_exited" from="sight" to="." method="_on_sight_body_exited"]
